--- a/websocket/css/card.scss
+++ b/websocket/css/card.scss
@@ -1,51 +1,128 @@
+$card-width: 2.5px * 64;
+$card-height: 3.5px * 64;
 
-.card {
-    @include border-radius(0.5em);
-
-    width: 2.5px  * 64;
-    height: 3.5px * 64;
-
-    background: $card-front;
-    color: black;
-    margin: 5pt;
-    box-shadow: 2px 2px 5px #000000;
-
-    &:before, &:after {
-        font-size: xx-large;
-        display: block;
-        margin: 0.1em;
-    }
-
-    font-size: xx-large;
-    text-align: center;
-    font-weight: bold;
-    //line-height: 3.5px * 64 / 3 ;//3.5px * 64;
-    vertical-align: middle;
-
-    &:before{
-        text-align: left;
-        margin-bottom: 30%;
-    }
-
-    &:after {
-        text-align: right;
-        margin-top: 30%;
-    }
-}
-
-.back {
+.pattern {
     background-color:#def;
     background-image: radial-gradient(closest-side, transparent 98%, rgba(0,0,0,.3) 99%),
     radial-gradient(closest-side, transparent 98%, rgba(0,0,0,.3) 99%);
     background-size:80px 80px;
     background-position:0 0, 40px 40px;
-    box-shadow: 5px 5px 5px #000000;
 }
 
-.blank {
-    background: none;
-    box-shadow: none;
-    border: 2px dashed #ffffff;
+.slot {
+    border: 2px dashed white;
+    margin: 5pt;
+    perspective: 1000;
+    -webkit-perspective: 1000;
+    display: inline-block;
+
+    overflow: visible;
+    
+    &.hover .card {
+        transform: rotateY(180deg) translateZ(-2em);
+    }
+}
+
+.hands {
+    overflow: hidden;
+    .hand {
+        margin: 5pt;
+        width: 100%;
+        
+        .title {
+            display: block;
+        }
+
+        .slot {
+            width: $card-width * 0.8;
+            height: $card-height * 0.8;
+            margin: 5pt;
+        }
+    }
+}
+
+.deck {
+    @extend .slot;
+    @extend .pattern;
+    box-shadow: 5px 5px 20px black;
+
+    .card {
+        transform: translateZ(3em);
+    }
+
+    &.hover .card {
+        transform: rotateY(180deg) translateZ(-4em);
+    }
+}
+
+.card, .slot , .face {
+    width: $card-width;
+    height: $card-height;
+
+    @include border-radius(0.5em);
+}
+
+.card {
+    transition: 0.6s;
+    transform-style: preserve-3d;
+    position: relative;
+}
+
+.card.blank {
+    .face {
+        display: none;
+    }
+}
+
+.face {
+    backface-visibility: hidden;
+
+    position: absolute;
+    box-shadow: 2px 2px 5px black;
+}
+
+.back {
+    @extend .face;
+
+    @extend .pattern;
+    //Animacja
+    transform: rotateY(0deg);
+    top: -2px;
+    left: -2px;
+}
+
+.front {
+    @extend .face;
+
+    background: white;
+    color: black;
+    font-size: xx-large;
+    font-weight: bold;
+    text-align: center;
+    vertical-align: middle;
+
+    &:before, &:after {
+        font-size: xx-large;
+        display: block;
+        margin: 0.1em;
+        text-align: left;
+    }
+
+    &:before {
+        margin-bottom: 30%;
+    }
+
+    &:after {
+        margin-top: 30%;
+        transform: rotateZ(180deg);
+    }
+
+    //Animacja
+    z-index: 2;
+    transform: rotateY(180deg);
+    top: -2px;
+    left: 2px;
+
 }
 
 .spade, .club {
@@ -55,7 +132,6 @@
 .diamond, .heart {
     color: red;
 }
-
 
 .heart:before, .heart:after {
     content: "♥";
