--- a/websocket-client/css/card.scss
+++ b/websocket-client/css/card.scss
@@ -1,151 +1,56 @@
-$card-width: 2.5px * 64;
-$card-height: 3.5px * 64;
 
-.pattern {
-    background-color:#def;
-    background-image: radial-gradient(closest-side, transparent 98%, rgba(0,0,0,.3) 99%),
-    radial-gradient(closest-side, transparent 98%, rgba(0,0,0,.3) 99%);
-    background-size:80px 80px;
-    background-position:0 0, 40px 40px;
+
+.card-slot, .card, .face {
+    @include border-radius(2vh);
+    width: $card-width;
+    height: $card-height;
+    min-width: $card-width;
+    min-height: $card-height;
+
 }
 
-.slot {
-    border: 2px dashed white;
-    margin: 5pt;
-    perspective: 1000;
-    -webkit-perspective: 1000;
-    display: inline-block;
-
+.card-slot {
+    border: $dashed;
+    margin: 1em;
+    @include perspective(1000);
     overflow: visible;
-    
-    &.hover .card {
+
+    &:hover .card, &.hover .card {
         transform: rotateY(180deg) translateZ(-2em);
     }
 }
 
-.hands {
-    overflow: hidden;
-    .hand {
-        margin: 5pt;
-        width: 100%;
-        
-        .title {
-            display: block;
-        }
+.card {
+    transition: transform 0.6s;
+    -webkit-transition: transform 0.6s;
 
-        .slot {
-            width: $card-width * 0.8;
-            height: $card-height * 0.8;
-            margin: 5pt;
-        }
+    transform-style: preserve-3d;
+    position: relative;
+    overflow: visible;
+
+    .face {
+        backface-visibility: hidden;
+        position: absolute;
+        top: -2px;
+        box-shadow: 2px 2px 5px black;
     }
+    
+    @import "card-front";
+    .back {
+        @extend .face;
+        transform: rotateY(0deg);
+        left: -2px;
+
+        @include deck-back();
+    }
+
 }
 
 .deck {
-    @extend .slot;
-    @extend .pattern;
+    @extend .card-slot;
+    border: 0;
+    @include deck-back();
     box-shadow: 5px 5px 20px black;
 
-    .card {
-        transform: translateZ(3em);
-    }
-
-    &.hover .card {
-        transform: rotateY(180deg) translateZ(-4em);
-    }
-}
-
-.card, .slot , .face {
-    width: $card-width;
-    height: $card-height;
-
-    @include border-radius(0.5em);
-}
-
-.card {
-    transition: 0.6s;
-    transform-style: preserve-3d;
-    position: relative;
-}
-
-.card.blank {
-    .face {
-        display: none;
-    }
-}
-
-.face {
-    backface-visibility: hidden;
-
-    position: absolute;
-    box-shadow: 2px 2px 5px black;
-}
-
-.back {
-    @extend .face;
-
-    @extend .pattern;
-    //Animacja
-    transform: rotateY(0deg);
-    top: -2px;
-    left: -2px;
-}
-
-.front {
-    @extend .face;
-
-    background: white;
-    color: black;
-    font-size: xx-large;
-    font-weight: bold;
-    text-align: center;
-    vertical-align: middle;
-
-    &:before, &:after {
-        font-size: xx-large;
-        display: block;
-        margin: 0.1em;
-        text-align: left;
-    }
-
-    &:before {
-        margin-bottom: 30%;
-    }
-
-    &:after {
-        margin-top: 30%;
-        transform: rotateZ(180deg);
-    }
-
-    //Animacja
-    z-index: 2;
-    transform: rotateY(180deg);
-    top: -2px;
-    left: 2px;
 
 }
-
-.spade, .club {
-    color: black;
-}
-
-.diamond, .heart {
-    color: red;
-}
-
-.heart:before, .heart:after {
-    content: "♥";
-}
-
-.diamond:before, .diamond:after {
-    content: "♦";
-}
-
-.club:before, .club:after {
-    content: "♣";
-}
-
-.spade:before, .spade:after {
-    content: "♠";
-}
-
