--- a/websocket-client/css/websocket.css
+++ b/websocket-client/css/websocket.css
@@ -65,6 +65,22 @@ body {
         justify-content: center; }
         body .table .opponents .opponent .hand .card-slot, body .table .opponents .opponent .hand .deck {
           margin: 0.5em; }
+    body .table .player .commands {
+      flex: 1;
+      width: 100%;
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: center;
+      height: 100%; }
+      body .table .player .commands button {
+        min-width: 20em;
+        min-height: 10em;
+        border: 2px solid white;
+        background-color: #477f4f;
+        color: white; }
+        body .table .player .commands button:hover {
+          background-color: #518f5a; }
     body .table .player .hand {
       flex: 1;
       width: 100%;
@@ -150,22 +166,30 @@ body {
     flex: 2;
     width: 100%;
     border-top: 2px dashed white;
-    padding: 1em; }
+    padding: 1em;
+    overflow: auto; }
   body #form {
     flex: 1;
     width: 100%;
     display: flex;
     flex-direction: row; }
-    body #form input {
+    body #form input, body #form button {
       border: 2px solid white;
       background-color: #477f4f;
       color: white; }
-      body #form input:hover {
+      body #form input:hover, body #form button:hover {
         background-color: #518f5a; }
+      body #form input:disabled, body #form button:disabled {
+        background-color: #aaaaaa; }
     body #form input#text-input {
-      flex: 5;
+      flex: 2;
       padding: 0.5em; }
-    body #form input[type="submit"] {
-      flex: 1; }
+    body #form .commands {
+      flex: 1;
+      display: flex;
+      flex-direction: row; }
+      body #form .commands button {
+        flex: 1;
+        text-transform: uppercase; }
 
 /*# sourceMappingURL=websocket.css.map */
