--- a/websocket-client/css/websocket.css
+++ b/websocket-client/css/websocket.css
@@ -103,7 +103,7 @@ body {
       perspective: 1000;
       -webkit-perspective: 1000;
       overflow: visible; }
-      body .table .card-slot:hover .card, body .table .deck:hover .card, body .table .card-slot.hover .card, body .table .hover.deck .card {
+      body .table .card-slot.hover .card, body .table .hover.deck .card {
         transform: rotateY(180deg) translateZ(-2em); }
     body .table .card {
       transition: transform 0.6s;
