--- a/websocket-client/css/websocket.css
+++ b/websocket-client/css/websocket.css
@@ -65,22 +65,18 @@ body {
         justify-content: center; }
         body .table .opponents .opponent .hand .card-slot, body .table .opponents .opponent .hand .deck {
           margin: 0.5em; }
-    body .table .player .commands {
+    body .table .player .bets {
       flex: 1;
       width: 100%;
       display: flex;
-      flex-direction: row;
+      flex-direction: column;
       align-items: center;
       justify-content: center;
-      height: 100%; }
-      body .table .player .commands button {
-        min-width: 20em;
-        min-height: 10em;
-        border: 2px solid white;
-        background-color: #477f4f;
-        color: white; }
-        body .table .player .commands button:hover {
-          background-color: #518f5a; }
+      font-size: x-large; }
+      body .table .player .bets .bet {
+        flex: 1;
+        width: 100%;
+        text-align: center; }
     body .table .player .hand {
       flex: 1;
       width: 100%;
@@ -162,6 +158,27 @@ body {
       background-size: 10vh 10vh;
       background-position: 0 0, 5vh 5vh;
       box-shadow: 5px 5px 20px black; }
+  body #login-form.visible {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center; }
+  body #login-form {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    z-index: 10;
+    display: none; }
+    body #login-form input, body #login-form button {
+      border: 2px solid white;
+      background-color: #477f4f;
+      color: white;
+      padding: 2em;
+      width: 75%;
+      margin: 1em; }
+      body #login-form input:hover, body #login-form button:hover {
+        background-color: #518f5a; }
   body #log {
     flex: 2;
     width: 100%;
