--- a/websocket-client/css/websocket.scss
+++ b/websocket-client/css/websocket.scss
@@ -24,6 +24,7 @@ $colors-hex: ('#ffaaaa', '#aaffaa', '#aaaaff', '#ffffaa');
     color: red;
 }
 
+
 body {
     background-color: $bg-color;
     color: $fg-color;
@@ -31,6 +32,32 @@ body {
     @include flex(column);
 
     @import "table";
+
+    #login-form.visible {
+        @include flex(column);
+    }
+
+    #login-form {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        background: rgba(0,0,0,0.5);
+        z-index: 10;
+        display: none;
+
+        input, button {
+            border: 2px solid $fg-color;
+            background-color: lighten($bg-color, 10%);
+            color: $fg-color;
+            padding: 2em;
+            width: 75%;
+            margin: 1em;
+
+            &:hover {
+                background-color: lighten($bg-color,15%);
+            }
+        }
+    }
 
     #log {
         @include flex-item(2);
